# compilation-assignment

./: .gitignore  README.txt
assign1/: README.txt
assign1/ast-interpreter/: ASTInterpreter.cpp  CMakeLists.txt  Environment.h
assign1/tests/: test00.c
assign2/: .gitignore  CMakeLists.txt  LLVMAssignment.cpp  Makefile  README.md  assign2-checker
assign2/checker/src/: check.rs  line_names.rs  main.rs  opt.rs
assign2/scripts/: build.sh  run.sh
assign3/: .gitignore  CMakeLists.txt  Dataflow2.h  LLVMAssignment2.cpp  Makefile  README.md
assign3/checker/: .gitignore  Cargo.toml
assign3/checker/src/: error_code.rs  parse.rs
assign3/scripts/: build.sh  run.sh
